<resources>
    <string name="app_name">ARI</string>
    <string name="title_activity_home_toolbar">HomeToolbarActivity</string>
    <string name="title_home">Главная</string>
    <string name="title_search">Поиск</string>
    <string name="title_basket">Корзина</string>
    <string name="title_add">Создать проект</string>
    <string name="title_account">Аккаунт</string>
    <string name="frame_title_ready_solutions">Готовые решения</string>
    <string name="title_frame_projects">Проекты</string>
    <string name="card_project_title">Создать новый</string>
    <string name="create_project_name_hint">Введите название проекта</string>
    <string name="choose_projects_icon">Выберите иконку проекта</string>
    <string name="create_project">Создать проект</string>
    <string name="catalog">Каталог</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Amet volutpat consequat mauris nunc. Tristique risus nec feugiat in. Mauris vitae ultricies leo integer malesuada. Ut tristique et egestas quis ipsum suspendisse ultrices gravida. Rhoncus dolor purus non enim praesent. Urna et pharetra pharetra massa massa ultricies. At augue eget arcu dictum varius duis at. Pellentesque massa placerat duis ultricies lacus sed turpis. Molestie nunc non blandit massa enim nec dui nunc. Non diam phasellus vestibulum lorem sed risus ultricies tristique. Ultricies mi quis hendrerit dolor magna eget est lorem ipsum.

Nibh venenatis cras sed felis. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Maecenas accumsan lacus vel facilisis volutpat est. Sed viverra tellus in hac habitasse platea. Etiam tempor orci eu lobortis. Faucibus vitae aliquet nec ullamcorper sit amet. Arcu cursus euismod quis viverra nibh. Aliquet lectus proin nibh nisl condimentum id venenatis. Vitae suscipit tellus mauris a diam maecenas sed enim ut. Integer enim neque volutpat ac. Nisl rhoncus mattis rhoncus urna. Amet venenatis urna cursus eget nunc scelerisque viverra mauris in. At consectetur lorem donec massa sapien faucibus et molestie. Elementum nibh tellus molestie nunc. Semper feugiat nibh sed pulvinar proin gravida hendrerit lectus a. Erat pellentesque adipiscing commodo elit at imperdiet dui. At quis risus sed vulputate odio ut enim. Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium.

Orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Fames ac turpis egestas integer eget. Nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi. Libero id faucibus nisl tincidunt eget nullam non nisi est. Senectus et netus et malesuada fames ac turpis egestas integer. Facilisis magna etiam tempor orci eu lobortis elementum nibh tellus. Purus viverra accumsan in nisl. Nec feugiat in fermentum posuere urna nec tincidunt. Etiam erat velit scelerisque in dictum non consectetur. Arcu odio ut sem nulla pharetra diam. Eget nunc lobortis mattis aliquam. Cursus risus at ultrices mi. At risus viverra adipiscing at in tellus integer feugiat. Amet nulla facilisi morbi tempus iaculis urna id. Diam vulputate ut pharetra sit.

Elementum facilisis leo vel fringilla est. Velit euismod in pellentesque massa placerat duis ultricies lacus sed. Suscipit adipiscing bibendum est ultricies integer quis auctor elit sed. Enim diam vulputate ut pharetra. Elementum tempus egestas sed sed. Ultricies leo integer malesuada nunc vel risus commodo viverra. Amet justo donec enim diam vulputate. Amet dictum sit amet justo donec enim diam vulputate ut. Aliquam sem fringilla ut morbi. Turpis egestas maecenas pharetra convallis posuere morbi leo urna molestie. Sed viverra tellus in hac habitasse. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Elementum eu facilisis sed odio morbi.

Elit scelerisque mauris pellentesque pulvinar. Egestas quis ipsum suspendisse ultrices. Suspendisse faucibus interdum posuere lorem ipsum. Nulla facilisi cras fermentum odio eu. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim. Cras ornare arcu dui vivamus arcu felis bibendum ut. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Id cursus metus aliquam eleifend mi. Quam id leo in vitae turpis massa sed elementum. Rhoncus dolor purus non enim praesent elementum facilisis. Nisl nunc mi ipsum faucibus vitae. Gravida cum sociis natoque penatibus et magnis dis. Porta nibh venenatis cras sed felis eget. Vivamus at augue eget arcu dictum.</string>
</resources>
