<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="su.arq.ari.activities.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="su.arq.ari.activities.main.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
    </fragment>

    <fragment
        android:id="@+id/navifation_create_project"
        android:name="su.arq.ari.activities.main.ui.createproject.CreateProjectFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_create_project"
        />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="su.arq.ari.activities.main.ui.basket.BasketFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_basket">
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="su.arq.ari.activities.main.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account">

    </fragment>

</navigation>