<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <EditText
        android:id="@+id/create_project_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:autofillHints="@string/create_project_name_hint"
        android:background="#00FFFFFF"
        android:inputType="text"
        android:textAppearance="@style/bsheet_create_project_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_project_fragment_choose_icon_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/choose_projects_icon"
        android:textAppearance="@style/bsheet_create_project_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_project_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/create_project_icons_recycler"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_project_fragment_choose_icon_text" />

    <ImageButton
        android:id="@+id/button_create_project"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="46dp"
        android:background="#00FFFFFF"
        android:src="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_project_icons_recycler" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_project"
        android:textAppearance="@style/button_caption_name"
        app:layout_constraintBottom_toBottomOf="@+id/button_create_project"
        app:layout_constraintEnd_toEndOf="@+id/button_create_project"
        app:layout_constraintStart_toStartOf="@+id/button_create_project"
        app:layout_constraintTop_toTopOf="@+id/button_create_project" />

</androidx.constraintlayout.widget.ConstraintLayout>